--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     background-color: var(--secundario);
     color: var(--blanco);
     padding: 1rem 3rem;
-    margin-top: 1rem;
+    margin-top: 3rem;
     font-size: 2rem;
     text-decoration: none;
     text-transform: uppercase;
@@ -39,11 +39,15 @@ body {
     border-radius: .5rem;
     width: 90%;
     text-align: center;
+    border: none;
 }
 @media (min-width: 768px) { 
     .boton{
         width: auto;
     }
+}
+.boton:hover {
+    cursor: pointer;
 }
 .sombra {
 
@@ -73,7 +77,11 @@ h1,h2,h3 {
 .titulo span {
     font-size: 2rem;
 }
+/* Utilidades */
 
+.w-100 {
+    width: 100%;
+}
 /* Navegacion Principal*/
 
 .nav-bg{
@@ -163,3 +171,49 @@ font-weight: normal;
     justify-content: space-evenly;
     align-items: center;
 }
+
+/** Contacto **/
+
+.formulario {
+    background-color: var(--gris);
+    width: min( 60rem , 100% );  /** Utilizar el valor mas pequeño **/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+
+}
+.formulario fieldset {
+    border: none;
+
+}
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario)
+}
+.contenedor-campos{
+
+}
+.campo {
+    margin-bottom: 1rem;
+}
+.campo label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+
+}
+.enviar .boton {
+    width: 100%;
+}
+
