--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,20 @@
 /* Globales */
 
 html {
-     font-size: 62.5%;
+     font-size: 50%;
      box-sizing:  border-box; /* Hack para box model */
+     scroll-snap-type: y mandatory;
 }
+
+/** SCROLL SNAP **/
+
+.mis-servicios,
+.navegacion-principal,
+.formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 *, *::before, *::after {
     box-sizing: inherit;
 }
@@ -79,8 +90,19 @@ h1,h2,h3 {
 }
 /* Utilidades */
 
-.w-100 {
+.w-sm-100 {
     width: 100%;
+}
+@media (min-width: 768px) { 
+    .w-sm-100 {
+        width: auto;
+    }
+}
+.flex {
+    display: flex;
+}
+.alinear-derecha {
+    justify-content: flex-end;
 }
 /* Navegacion Principal*/
 
@@ -135,6 +157,10 @@ h1,h2,h3 {
 .contenido-hero h2,
 .contenido-hero p {
     color:var(--blanco);
+}
+.contenido-hero .ubicacion{
+    display: flex;
+    align-items: flex-end;
 }
 
 /* Servicios*/
@@ -194,9 +220,20 @@ font-weight: normal;
     margin-bottom: 2rem;
     color: var(--primario)
 }
-.contenedor-campos{
 
+@media (min-width: 768px) { 
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
 }
+
 .campo {
     margin-bottom: 1rem;
 }
@@ -206,14 +243,18 @@ font-weight: normal;
     margin-bottom: .5rem;
     display: block;
 }
+.campo textarea {
+    height: 16rem;
+    
+}
 .input-text {
     width: 100%;
     border: none;
     padding: 1.5rem;
     border-radius: .5rem;
-
 }
-.enviar .boton {
-    width: 100%;
-}
+/** Footer **/
 
+.footer {
+    text-align: center;
+}
