--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,12 @@ html {
 /** SCROLL SNAP **/
 
 .navegacion-principal,
-.mis-servicios,
-.servicio,
-.formulario {
+.servicio:nth-child(1),
+.servicio:nth-child(2), /*COMANDO PARA SELECIONAR UNA POSICION ENTRE VARIAS CLASS CON MISMO NOMBRE */
+.servicio:nth-child(3),
+.contacto-1,
+.formulario,
+.footer {
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
